# bookeditor

./: .eslintrc.cjs  .gitignore  Makefile  README.md  UNDO_FEATURE.md  docker-compose.yml  extract_docx_text.py  import_docx.py  package.json  simple_upload.py  tsconfig.json  upload_manuscript.py
api/: .env.dev  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py
api/alembic/: env.py
api/alembic/versions/: 0001_initial_migration.py
api/app/: database.py  main.py  models.py
api/app/routes/: edits.py  manuscripts.py
api/app/services/: chunking.py  diff.py  embeddings.py  export.py  llm.py
src/: index.ts
src/__tests__/: index.test.ts
src/utils/: logger.ts
web/: package-lock.json  package.json  tsconfig.json
web/src/components/: BookEditor.module.css  BookEditor.tsx  DiffViewer.module.css  DiffViewer.tsx  EditConsole.module.css  EditConsole.tsx  ManuscriptViewer.module.css  ManuscriptViewer.tsx  VersionHistory.module.css  VersionHistory.tsx
web/src/lib/: api.ts
web/src/pages/: index.tsx
web/src/styles/: globals.css
