[tool.poetry]
name = "bookeditor-api"
version = "0.1.0"
description = "FastAPI backend for BookEditor MVP"
packages = ["app"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
psycopg[binary] = "^3.0.11"
sqlalchemy = "^2.0.20"
alembic = "^1.11.0"
python-dotenv = "^1.0.0"
pgvector = "^0.7.1"
pydantic = "^1.10.11"
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.21.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
